Require Jenkins 2.479.3 or newer and Jakarta EE 9